static/css/override.css
#slider .block h1 {
    font-family: 'Roboto', sans-serif;
    font-weight: 100;
    font-size: 45px;
    line-height: 60px;
    letter-spacing: 10px;
    padding-bottom: 45px;
    color: 	#3FFF00;
  }

#slider .block p {
    font-size: 23px;
    line-height: 40px;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    letter-spacing: 3px;
    color: 	#3FFF00;
}

#feature h2 {
    color: #FFFFFF;
}

#feature p {
    color: #FFFFFF;
}

#feature ul {
    list-style-type:disc;
    margin-left: 4em;
    color: #FFFFFF;
}

.markdown-body ul {
    list-style-type: disc;
}

#docs-header {
    background: url("../img/slider-bg.jpg") no-repeat;
    background-size: cover;
    padding-top: 20px;
    padding-bottom: 20px;
    position: relative;
    background-attachment: fixed;
}
#docs-header:before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(to left, #928dab, #1f1c2c 70%);
    opacity: 0.8;
}
#docs-header .block {
    color: #E3E3E4;
    margin: 0 auto;
    padding-left: 90px;
    text-align: center;
}
#docs-header .block h1 {
    font-weight: 100;
    font-size: 45px;
    letter-spacing: 6px;
    margin-top: 0;
    margin-bottom: 0;
    text-transform: capitalize;
}

#docs-header .block ul {
    display: inline-block;
}

#docs-header .block ul li {
    display: inline-block;
    padding: 0px 25px;
    cursor: pointer;
    font-weight: 100;
    font-size: 25px;
    text-transform: capitalize;
    position: relative;
}

#docs-header .block ul li a {
    color: #FFFFFF;
}

#docs-header .block p {
    font-size: 16px;
    font-weight: 300;
    letter-spacing: 1px;
    word-spacing: 3px;
}

header .navbar-brand img {
    height: 80px;
}

header {
    padding-top: 0px;
    padding-bottom: 0px;
    height: 90px;
}

header .container {
    margin-top: 20px;
    margin-bottom: 20px;
}

.container img.img-responsive {
    padding-top: 10px;
    max-height: 580px;
    margin: auto;
}

#bs-example-navbar-collapse-1 {
    background: white;
}

.fix-navbar-zindex {
    z-index: 1;
}

.row-fluid {
    display: flex;
    flex-wrap: wrap;
    max-height:80px;
}
.row-fluid > [class*='col-'] {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.navbar-brand {
    height: 80px;
}

